manifests/externaldns.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: external-dns
