manifests/vault.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  labels:
    name: vault
# ---
# apiVersion: external-secrets.io/v1beta1
# kind: ExternalSecret
# metadata:
#   name: sso
#   namespace: jenkins
# spec:
#   refreshInterval: "5m"
#   secretStoreRef:
#     kind: ClusterSecretStore
#     name: 1password
#   target:
#     creationPolicy: Owner
#   data:
#     - secretKey: jenkins-admin-secret
#       remoteRef:
#         key: jenkins
#         property: admin-secret
# ---
# apiVersion: cert-manager.io/v1
# kind: Certificate
# metadata:
#   name: vault-cert
#   namespace: vault
# spec:
#   commonName: vault.<path:stringreplacesecret#domain2>.net
#   secretName: vault-cert
#   dnsNames:
#     - vault.<path:stringreplacesecret#domain2>.net
#   issuerRef:
#     name: acme-prod
#     kind: ClusterIssuer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: vault
  annotations:
    cert-manager.io/cluster-issuer: acme-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - vault.<path:stringreplacesecret#domain2>.net
    secretName: vault-cert
  rules:
  - host: vault.<path:stringreplacesecret#domain2>.net
    http:
      paths:
      - backend:
          service:
            name: vault
            port:
              number: 8200
        path: /
        pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  name: vault-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: vault.<path:stringreplacesecret#domain2>.net
    external-dns.alpha.kubernetes.io/ttl: "300"
  labels:
    app.kubernetes.io/instance: vault
spec:
  type: ExternalName
  externalName: nginx.<path:stringreplacesecret#domain2>.net
  sessionAffinity: None
